# clap_plugin_example

./: .gitignore  CMakeLists.txt  README.md
include/: osc.hpp
src/: echo_plugin.c  linux-echo_plugin.version  main.c  osc.cpp
